--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PersonaWatch - Dashboard</title>
+    <title>MentionWire - Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -14,14 +14,10 @@
         <!-- Sidebar Navigation -->
         <nav class="sidebar">
             <div class="sidebar-header">
-                <div class="logo">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="11" cy="11" r="8"/>
-                        <path d="m21 21-4.35-4.35"/>
-                        <circle cx="11" cy="11" r="3"/>
-                    </svg>
-                    <span>PersonaWatch</span>
-                </div>
+                <a href="index.html" class="logo">
+                    <img src="Logo/Logomen.png" alt="MentionWire" class="logo-dashboard">
+                    <span>MentionWire</span>
+                </a>
             </div>
             
             <div class="sidebar-menu">
