--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PersonaWatch - Real-Time Personality Monitoring</title>
+    <title>MentionWire - Real-Time Personality Monitoring</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -112,7 +112,7 @@
                             Continuously scans millions of websites, social media platforms, news sources, and forums for personality mentions
                         </p>
                         <div class="card-footer">
-                            <span class="card-link">Learn More</span>
+                            <a href="web-scanning.html" class="card-link">Learn More</a>
                         </div>
                     </div>
 
@@ -139,7 +139,7 @@
                             Beautiful, customizable dashboards that display mentions in real-time with interactive charts and visualizations
                         </p>
                         <div class="card-footer">
-                            <span class="card-link">Learn More</span>
+                            <a href="live-display.html" class="card-link">Learn More</a>
                         </div>
                     </div>
 
@@ -158,7 +158,7 @@
                             Advanced sentiment analysis, trend detection, and intelligent filtering with customizable monitoring parameters
                         </p>
                         <div class="card-footer">
-                            <span class="card-link">Learn More</span>
+                            <a href="ai-analytics.html" class="card-link">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                         <h2 class="contact-title">Start Your Monitoring</h2>
                         <p class="contact-subtitle">
                             Ready to track personalities and mentions in real-time? 
-                            Get started with PersonaWatch today.
+                            Get started with MentionWire today.
                         </p>
                         <div class="contact-details">
                             <div class="contact-detail">
@@ -242,7 +242,7 @@
                                 </div>
                                 <div class="detail-text">
                                     <span class="detail-label">Email</span>
-                                    <span class="detail-value">contact@personawatch.com</span>
+                                    <span class="detail-value">contact@mentionwire.com</span>
                                 </div>
                             </div>
                             <div class="contact-detail">
@@ -293,11 +293,11 @@
         <!-- Footer Content -->
         <div class="footer-content">
             <div class="footer-logo">
-                <span class="logo-icon">👁</span>
-                <span class="logo-text">PersonaWatch</span>
+                <img src="Logo/Logomen.png" alt="MentionWire" class="logo-image">
+                <span class="logo-text">MentionWire</span>
             </div>
             <p class="footer-tagline">Real-time personality monitoring across the web</p>
-            <p class="footer-copyright">© 2024 PersonaWatch. All rights reserved.</p>
+            <p class="footer-copyright">© 2024 MentionWire. All rights reserved.</p>
         </div>
 
     <script src="script.js"></script>
